--- a/demo/index.html
+++ b/demo/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Mint UI</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1469597443_9221172.css">
-    <link href="./app.3e840f3.css" rel="stylesheet">
-  </head>
+  <link href="/mint-ui/app.ffb40ea.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-    <script src="./lib/vue.js"></script>
-    <script src="./lib/vue-router.js"></script>
-    <script src="./lib/fastclick.js"></script>
-    <script type="text/javascript" src="./app.924d87a.js"></script>
-  </body>
+    <script src="//unpkg.com/vue@2.2.6/dist/vue.js"></script>
+    <script src="//unpkg.com/vue-router@2.4.0/dist/vue-router.js"></script>
+    <script src="//unpkg.com/fastclick@1.0.6/lib/fastclick.js"></script>
+  <script type="text/javascript" src="/mint-ui/app.5bb8619.js"></script></body>
 </html>
